Fixed css for Equipment. Need to align images and icons.

--- a/src/components/Equipment/EquipmentPanel.css
+++ b/src/components/Equipment/EquipmentPanel.css
@@ -1,18 +1,19 @@
 .equipment-panel-container {
     display: grid;
     grid-template-columns: repeat(5, minmax(0 , 1fr));
+    /* grid-template-columns: repeat(5, 1fr); */
     /* grid-auto-rows: minmax(0, 1fr); */
     grid-template-rows: repeat(3, minmax(0, 1fr));
 
     height: 9.5vh;
     /* width: 50vw; */
-    border-style: solid;
+    /* border-style: solid;
     border-color: red;
-    border-width: 1px;
+    border-width: 1px; */
 }
 
 .eq-name {
-    grid-column: 1 / span 1;
+    grid-column: 1 /  3;
     grid-row: 1;
 
     border-style: solid;
@@ -27,23 +28,17 @@
 }
 
 .eq-stat {
-    grid-column: 4 / 5;
-    grid-row: 1 / 2;
+    grid-column: 4 / 6;
+    grid-row: 1 / 3;
 }
 
 .eq-img {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    grid-row: 2 / 4;
     display: flex;
 }
 
 .eq-img > img {
-    border-style: solid;
-    border-color: yellow;
-    border-width: 1px;
-}
-
-/* .eq-img > img {
     max-height: 100%;
 
     border-style: solid;
@@ -52,11 +47,13 @@
 
     margin-left: auto;
     margin-right: auto;
-} */
+}
 
 .eq-element {
     grid-column: 3;
     grid-row: 2;
+    display: flex;
+    
 }
 
 .eq-elemnt > img {
@@ -76,7 +73,7 @@
 }
 
 .eq-enhancement {
-    grid-column: 4 / 5;
+    grid-column: 4 / 6;
     grid-row: 3;
 }
 
